# AI-Powered-Code-Review

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: agent-safety.mdc
api/: .env.example  Dockerfile.dev  Dockerfile.prod  pyproject.toml
api/alembic/versions/: 002_normalize_review_schema.py  003_add_review_branch.py
api/app/: main.py
api/app/api/routes/: review.py
api/app/config/: settings.py
api/app/core/: exceptions.py
api/app/database/: session.py
api/app/repositories/: review_repository.py
api/app/schemas/: __init__.py  progress.py  review_fixtures.py  review_request.py  review_response.py
api/app/services/: review_service.py
api/tests/: conftest.py  test_github_url.py  test_schemas.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: review.py
backend/app/chunking/: __init__.py  domain.py  factory.py  loaders.py  ports.py  registry.py  strategies.py
backend/app/config/: settings.py
backend/app/core/: exceptions.py  logging.py
backend/app/database/: session.py
backend/app/llm/: __init__.py
backend/app/llm/prompts/: chunk_review.py
backend/app/llm/providers/: azure_openai.py
backend/app/models/: __init__.py  review.py
backend/app/prompts/: code_review.py
backend/app/repositories/: review_repository.py
backend/app/review/: pipeline.py
backend/app/schemas/: health.py  review_request.py  review_schema.py
backend/app/services/: github_service.py  langchain_service.py  llm_review_service.py  repo_scanner.py  report_service.py  repository_service.py  review_service.py  worker_service.py
backend/app/utils/: file_utils.py  github_url.py
backend/app/workers/: review_worker.py
backend/docs/: workflow.md
backend/tests/: conftest.py  test_api.py  test_azure_openai.py  test_chunking.py  test_clone_repo.py  test_schemas.py  test_services.py
db/: pyproject.toml
db/alembic/: env.py
db/alembic/versions/: 002_normalize_review_schema.py
db/database/: __init__.py  session.py  settings.py
db/database/models/: __init__.py  enums.py  finding.py  repository.py  review.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/app/(dashboard)/: page.client.tsx  page.tsx
frontend/components/: Charts.tsx  FileExplorer.tsx  IssueList.tsx  ProgressTracker.tsx  RepositoryInfo.tsx  ReviewForm.tsx  ReviewSummary.tsx  ScoreCard.tsx
frontend/hooks/: useReview.ts
frontend/lib/: constants.ts
frontend/services/: api.ts
frontend/types/: index.ts
frontend/utils/: env.ts  format.ts
worker/: .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  pyproject.toml
worker/app/: main.py
worker/app/chunking/: service.py  strategies.py
worker/app/config/: settings.py
worker/app/llm/: __init__.py
worker/app/models/: __init__.py
worker/app/repositories/: review_repository.py
worker/tests/: conftest.py  test_services.py
(+14 files in other folders)
