[project]
name = "ai-powered-code-review"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
]

[tool.uv.workspace]
members = ["db", "api", "worker"]

[tool.uv]
package = false

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
extraPaths = ["db"]
include = ["api", "worker", "db"]

[tool.black]
target-version = ["py313"]
line-length = 100
