[project]
name = "code-review-api"
version = "0.1.0"
description = "Public API for AI-Powered GitHub Code Review"
requires-python = ">=3.13"
dependencies = [
    "database",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic>=2.11",
    "pydantic-settings==2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "ruff>=0.9",
]

[tool.uv.sources]
database = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv]
package = false
