[project]
name = "database"
version = "0.1.0"
description = "Shared SQLAlchemy models and Alembic migrations"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "greenlet==3.1.1",
    "psycopg2-binary==2.9.10",
    "pydantic>=2.11",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["database*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
